--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = "1.0"
-group = "pw.twpi.whitelistSync" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "whitelistSync"
+group = "pw.twpi.whitelistsync" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "whitelistsync"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
