--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,12 @@ buildscript {
         maven { url = "http://files.minecraftforge.net/maven" }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.0-1.12.2"
+version = "1.0-1.10.2"
 group = "pw.twpi.whitelistsync" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "whitelistsync"
 
@@ -19,10 +19,15 @@ compileJava {
 }
 
 minecraft {
-    version = "1.12.2-14.23.1.2587"
+    version = "1.10.2-12.18.3.2511" // 1.10.2
+    // version = "1.11.2-13.20.1.2588" // 1.11.2
+    // version = "1.12.2-14.23.1.2598" // 1.12.2
     runDir = "run"
 
-    mappings = "snapshot_20171003"
+
+    mappings = "snapshot_20161111" // 1.10.2
+    // mappings = "snapshot_20161220" // 1.11.2
+    // mappings = "snapshot_20171003" // 1.12.2
 }
 
 repositories {
