--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,15 @@ compileJava {
 }
 
 minecraft {
-    version = "1.12.2-14.23.1.2587"
+    // version = "1.10.2-12.18.3.2511" // 1.10.2
+    // version = "1.11.2-13.20.1.2588" // 1.11.2
+    version = "1.12.2-14.23.1.2598" // 1.12.2
     runDir = "run"
 
-    mappings = "snapshot_20171003"
+
+    // mappings = "snapshot_20161111" // 1.10.2
+    // mappings = "snapshot_20161220" // 1.11.2
+    mappings = "snapshot_20171003" // 1.12.2
 }
 
 repositories {
